--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,15 @@
                 <artifactId>slf4j-log4j12</artifactId>
                 <version>1.7.10</version>
             </dependency>
+            <!--jedis依赖-->
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>3.3.0</version>
+            </dependency>
         </dependencies>
+
+
     </dependencyManagement>
 
 
